--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -3,3 +3,17 @@ h3,
 h4 {
   margin-top: 3em !important;
 }
+
+.md-header {
+  background-color: #0096c7;
+}
+
+.md-tabs {
+  background-color: #0096c7;
+}
+
+@media (max-width: 768px) {
+  .md-nav--primary .md-nav__title[for="__drawer"] {
+    background-color: #0096c7;
+  }
+}
