--- a/overrides/partials/footer.html
+++ b/overrides/partials/footer.html
@@ -26,7 +26,7 @@
     height: 2px;
     bottom: -5px;
     left: 0;
-    background-color: rgb(144, 203, 206);
+    background-color: #eff1fa;
     transition: width 0.3s ease;
   }
 
@@ -44,7 +44,7 @@
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
-    background-color: rgb(144, 203, 206);
+    background-color: #eff1fa;
     color: #1e1e2f;
     text-decoration: none;
     border-radius: 8px;
@@ -55,7 +55,7 @@
   }
 
   .footer-link:hover {
-    background-color: rgb(144, 203, 206);
+    background-color: #eff1fa;
     transform: translateY(-3px);
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
   }
@@ -77,7 +77,7 @@
   }
 
   .course-name {
-    background-color: rgb(144, 203, 206);
+    background-color: #eff1fa;
     color: #1e1e2f;
     padding: 2px;
   }
