--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -1,3 +1,7 @@
+:root {
+  --primary-color: #0096c7;
+}
+
 h2,
 h3,
 h4 {
@@ -5,15 +9,15 @@ h4 {
 }
 
 .md-header {
-  background-color: #0096c7;
+  background-color: var(--primary-color);
 }
 
 .md-tabs {
-  background-color: #0096c7;
+  background-color: var(--primary-color);
 }
 
 @media (max-width: 768px) {
   .md-nav--primary .md-nav__title[for="__drawer"] {
-    background-color: #0096c7;
+    background-color: var(--primary-color);
   }
 }
