--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -2,9 +2,9 @@
   --primary-color: #0096c7;
 }
 
-h2,
-h3,
-h4 {
+h2:not(.statistical-details h2),
+h3:not(.statistical-details h3),
+h4:not(.statistical-details h4) {
   margin-top: 3em !important;
 }
 
