non parametric tests with k=2

--- a/docs/stylesheets/style.css
+++ b/docs/stylesheets/style.css
@@ -2,10 +2,14 @@
   --primary-color: #0096c7;
 }
 
-h2:not(.statistical-details h2),
-h3:not(.statistical-details h3),
-h4:not(.statistical-details h4) {
+h2,
+h3,
+h4 {
   margin-top: 3em !important;
+}
+
+.after-statistical {
+  margin-top: 1.5em !important; /* or 0 */
 }
 
 .md-header {
@@ -20,10 +24,4 @@ h4:not(.statistical-details h4) {
   .md-nav--primary .md-nav__title[for="__drawer"] {
     background-color: var(--primary-color);
   }
-}
-
-.md-typeset table:not([class]) th,
-.md-typeset table:not([class]) td {
-  padding: 0.2em 0.5em !important;
-  text-align: center !important;
 }
